Added controller and view for adding recipes

--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -1,3 +1,5 @@
 <div ng-repeat="recipe in recipes">	
 	<p>{{recipe.name}}</p>
 </div>
+
+<a class="btn btn-primary submitButton" ng-click="add()">Add Recipe</a>
