--- a/client/app/views/add.html
+++ b/client/app/views/add.html
@@ -1,8 +1,8 @@
 <input type="text" id="recipeName" ng-model="recipeName" />
 
-<div ng-repeat="ing in ingredients">
+<div ng-repeat="ingredient in ingredients">
 
-	<input type="text" id="ingredient1" ng-model="ing.name" />
+	<input type="text" id="ingredient1" ng-model="ingredient.name" />
 	
 
 </div>
