added metro style. FIX - corrected modify routing. Added ability to add recipes to db

--- a/client/app/views/add.html
+++ b/client/app/views/add.html
@@ -1,12 +1,36 @@
-<input type="text" id="recipeName" ng-model="recipeName" />
+<div class="grid">
 
-<div ng-repeat="ingredient in ingredients">
+	<div class="row cells12">
 
-	<input type="text" id="ingredient1" ng-model="ingredient.name" />
+		<div class="cell"></div>
+
+			<div class="cell colspan10">
+
+				<h4>Add Recipe</h4>
+
+				<div class="input-control modern text full-size">
+					<input type="text" id="recipeName" ng-model="name" placeholder="Recipe Name"/>
+					<span class="label">Recipe Name:</span>
+					<span class="informer">Please enter a name for the recipe</span>
+				</div>
+
+				<div class="input-control modern text full-size" ng-repeat="ingredient in ingredients">
+					<input type="text" id="ingredient1" ng-model="ingredient.name" placeholder="Ingredient" />
+					<span class="label">Ingredient:</span>
+					<span class="informer">Please enter an ingredient</span>
+					<span class="mif-sppon-fork"></span>
+				</div>
+
+				<div class="input-control textarea full-size">
+					<textarea id="instructions" ng-model="instructions" placeholder="Instructions"></textarea>										
+				</div>
+
+				<button class="button primary large-button" ng-click="addRecipe()">Add Recipe</button>
+
+			</div>
+
+		<div class="cell"></div>
 	
+	</div>
 
 </div>
-
-<textarea id="instructions" ng-model="instructions">
-	
-</textarea>
