--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -1,5 +1,22 @@
-<div ng-repeat="recipe in recipes">	
-	<p>{{recipe.name}}</p>
-</div>
 
-<a class="btn btn-primary submitButton" ng-click="add()">Add Recipe</a>
+
+	<div class="row">
+
+	
+		<div class="col s12"> 
+			
+
+				<div ng-repeat="recipe in recipes">	
+					<button class="button large-button center-block"><span class="mif-pencil"></span> {{recipe.name}}</button>
+				</div>
+
+				<button class="button primary large-button submitButton center-block" ng-click="add()"><span class="mif-plus"></span> Add Recipe</button>
+			
+		</div>
+
+	</div>
+
+	
+
+
+
