Added working recipe updates. Need to fix empty data being saved to db

--- a/client/app/views/add.html
+++ b/client/app/views/add.html
@@ -1,36 +1,26 @@
-<div class="grid">
+	<div class="row">
 
-	<div class="row cells12">
+		<form class="col s12">
 
-		<div class="cell"></div>
-
-			<div class="cell colspan10">
-
-				<h4>Add Recipe</h4>
-
-				<div class="input-control modern text full-size">
-					<input type="text" id="recipeName" ng-model="name" placeholder="Recipe Name"/>
-					<span class="label">Recipe Name:</span>
-					<span class="informer">Please enter a name for the recipe</span>
+				<div class="input-field">
+					<input type="text" id="recipeName" ng-model="name" />
+					<label for="recipeName">Recipe Name:</label>
 				</div>
 
-				<div class="input-control modern text full-size" ng-repeat="ingredient in ingredients">
-					<input type="text" id="ingredient1" ng-model="ingredient.name" placeholder="Ingredient" />
-					<span class="label">Ingredient:</span>
-					<span class="informer">Please enter an ingredient</span>
-					<span class="mif-sppon-fork"></span>
+				<div class="input-field" ng-repeat="ingredient in ingredients">
+					<input type="text" id="ingredient1" ng-model="ingredient.name" />
+					<label for="ingredient1">Ingredient:</label>
 				</div>
 
-				<div class="input-control textarea full-size">
-					<textarea id="instructions" ng-model="instructions" placeholder="Instructions"></textarea>										
+				<div class="input-field">
+					<textarea class="materialize-textarea" id="instructions" ng-model="instructions" ></textarea>
+					<label for="instructions">Instructions:</label>
 				</div>
 
-				<button class="button primary large-button" ng-click="addRecipe()">Add Recipe</button>
+				<button class="waves-effect waves-light btn center-block" ng-click="addRecipe()">Add Recipe</button>
 
-			</div>
+		</form>
 
-		<div class="cell"></div>
 	
 	</div>
 
-</div>
