--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -1,15 +1,13 @@
 	<div class="row">
-
 	
-		<div class="col s12"> 
+		<div class="col s12 center-align"> 
 			
+			<div class="collection">
+					<a ng-repeat="recipe in recipes" href="#" class="collection-item" ng-click="modifyRecipe(recipe.data._id)">{{recipe.data.name}}</a>
+			</div>
 
-				<div ng-repeat="recipe in recipes">	
-					<button class="button large-button center-block"><span class="mif-pencil"></span> {{recipe.name}}</button>
-				</div>
+			<button class="waves-effect waves-light btn center-block" ng-click="add()"><span class="mif-plus"></span> Add Recipe</button>
 
-				<button class="button primary large-button submitButton center-block" ng-click="add()"><span class="mif-plus"></span> Add Recipe</button>
-			
 		</div>
 
 	</div>
