--- a/client/app/views/modify.html
+++ b/client/app/views/modify.html
@@ -10,8 +10,8 @@
 				</div>
 
 				<div class="input-field" ng-repeat="ingredient in ingredients">
-					<input type="text" id="ingredient1" ng-model="ingredient.name" value = "ingredient.name" ng-blur="addIngredientField($index)"/>
-					<label class="active" for="ingredient1">Ingredient:</label>
+					<input type="text" id="ingredient_{{$index}}" ng-model="ingredient.name" value = "ingredient.name" ng-blur="appendIngredient($index)"/>
+					<label class="active" for="ingredient_{{$index}}">Ingredient:</label>
 				</div>
 
 				<div class="input-field">
