fixed form completion checking

--- a/client/app/views/add.html
+++ b/client/app/views/add.html
@@ -8,7 +8,7 @@
 				</div>
 
 				<div class="input-field" ng-repeat="ingredient in ingredients">
-					<input type="text" id="ingredient_{{$index}}" ng-model="ingredient.name" ng-blur="appendIngredient($index)" />
+					<input type="text" id="ingredient_{{$index}}" ng-model="ingredient.name" ng-blur="appendIngredient()" />
 					<label for="ingredient1">Ingredient:</label>
 				</div>
 
