--- a/client/app/views/modify.html
+++ b/client/app/views/modify.html
@@ -10,7 +10,7 @@
 				</div>
 
 				<div class="input-field" ng-repeat="ingredient in ingredients">
-					<input type="text" id="ingredient_{{$index}}" ng-model="ingredient.name" value = "ingredient.name" ng-blur="appendIngredient($index)"/>
+					<input type="text" id="ingredient_{{$index}}" ng-model="ingredient.name" value = "ingredient.name" ng-blur="appendIngredient()"/>
 					<label class="active" for="ingredient_{{$index}}">Ingredient:</label>
 				</div>
 
