added deletion of recipes

--- a/client/app/views/modify.html
+++ b/client/app/views/modify.html
@@ -20,6 +20,7 @@
 				</div>
 
 				<button class="waves-effect waves-light btn center-block" ng-click="modifyRecipe()">{{ ButtonMsg }}</button>
+				<button class="waves-effect waves-light btn center-block" ng-click="deleteRecipe()">Delete Recipe</button>
 
 		</form>
 
