--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -1,4 +1,7 @@
 <div>
+
+<h4>Login Page</h4>
+
 	<input type="text" id="email" ng-model="email" >
 	<input type="password" id="password" ng-model="password" >
 
